--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,3 +42,5 @@ dependencies {
     implementation 'me.dm7.barcodescanner:zxing:1.9.8'
     implementation 'com.journeyapps:zxing-android-embedded:3.4.0'
 }
+
+apply plugin: 'com.google.gms.google-services'
