--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,8 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
     implementation 'me.dm7.barcodescanner:zxing:1.9.8'
     implementation 'com.journeyapps:zxing-android-embedded:3.4.0'
+
+    implementation 'com.itextpdf:itextg:5.5.10'
 }
 
 apply plugin: 'com.google.gms.google-services'
